objects/ChargentBase__Chargent_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ChargentBase__Accept_eCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is set to TRUE users of your Payment Request page will be able to choose to use an eCheck to pay the amount due.</inlineHelpText>
        <label>Accept Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Account_Updater_Confirmation_Text__c</fullName>
        <label>Account Updater Confirmation Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Account_Updater_Error_Text__c</fullName>
        <label>Account Updater Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Account_Updater_Expiration_Hours__c</fullName>
        <label>Account Updater Expiration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Activate_Automated_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Automated Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Automated_Collections_Batch_Chunk_Limit__c</fullName>
        <label>Automated Collections Batch Chunk Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Automatically_Create_PR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Create PR Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Chargent_Activation_Key__c</fullName>
        <label>Chargent Activation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Chargent_Admin_Email_Address__c</fullName>
        <label>Chargent Admin Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Copy_Billing_Address_from_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this is checked Chargent will automatically copy the Billing Address information from the Account.</inlineHelpText>
        <label>Copy Billing Address from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Default_Currency__c</fullName>
        <label>Default Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Error_Page__c</fullName>
        <label>Error Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__MC_Auth_Type__c</fullName>
        <label>MC Auth Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Opportunity_Search_Criteria__c</fullName>
        <label>Account Updater Search Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Batch_Chunk_Size_Limit__c</fullName>
        <inlineHelpText>WARNING: Update only when advised by support

This setting changes the number of records per set sent to the gateway during batches. Lowering this will slow the speed of your batch increasing this may cause errors. Please email support for assistance.</inlineHelpText>
        <label>Payment Batch Chunk Size Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Confirmation_Text__c</fullName>
        <label>Payment Confirmation Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Error_Text__c</fullName>
        <label>Payment Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Link_Expiration_Hours__c</fullName>
        <label>Payment Link Expiration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Payment_Request_Confirmation_Text__c</fullName>
        <label>Payment Request Confirmation Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentBase__SFDC_Sites_Page__c</fullName>
        <label>SFDC Sites Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Thank_You_Page__c</fullName>
        <label>Thank You Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Transaction_Status_Batch_Chunk_Limit__c</fullName>
        <inlineHelpText>WARNING: Update only when advised by support

This setting changes the number of records per set sent to the gateway during batches. Lowering this will slow the speed of your batch increasing this may cause errors. Please email support for assistance.</inlineHelpText>
        <label>Transaction Status Batch Chunk Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Use_RealEx_Rebate_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use RealEx Rebate Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Use_Simple_Account_Updater_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Simple Account Updater Feature</label>
        <type>Checkbox</type>
    </fields>
    <label>Chargent Settings</label>
</CustomObject>